feat: add router for cleaner DI
